<resources>
    <string name="app_name">GoElite</string>
    <string name="app_version">3.6.0.3</string>

    <!-- 常用错误提示-->
    <string name="errmsg_network_unavailable">网络不可用</string>
    <string name="errmsg_data_error">数据出错</string>

    <string name="alt_cancel">取消</string>
    <string name="alt_ensure">确定</string>
    <string name="alt_continue">继续</string>

    <!-- 启动-->
    <string name="splash_enter">开始</string>


    <!-- 首页-->
    <string name="tab_homepage">首页</string>
    <string name="tab_learning">学习</string>
    <string name="tab_task">任务</string>
    <string name="tab_me">我的</string>

    <string name="more">更多</string>
    <string name="begin_learn">开始学习</string>

    <string name="title_news">最新资讯</string>

    <!-- 我的-->
    <string name="learn_summary">学习小结</string>
    <string name="my_list">我的榜单</string>
    <string name="my_honor">我的荣誉</string>
    <string name="my_questionnaire">调研问卷</string>
    <string name="my_learning_path">学习路径</string>
    <string name="my_degree">微学位</string>
    <string name="my_certificate_centre">证书中心</string>
    <string name="my_message_centre">消息中心</string>
    <string name="my_help_centre">帮助中心</string>
    <string name="learning_points">获得总积分</string>

    <!-- 登录-->
    <string name="input_hint_old_password">请输入旧密码</string>
    <string name="input_hint_new_password">请输入新密码</string>
    <string name="input_hint_new_password_again">请再次输入新密码</string>
    <string name="tips_change_password">密码字符6-20个字母或数字</string>
    <string name="input_hint_username">请输入用户名</string>
    <string name="input_hint_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_passwords">忘记密码?</string>
    <string name="login_name_null">账号为空</string>
    <string name="login_password_null">密码为空</string>
    <string name="login_name_err">用户名不能大于30位或少于6位</string>

    <!-- 组织机构选择-->
    <string name="tips_organ_select_1">您的账户属于多个机构</string>
    <string name="tips_organ_select_2">请选择要进入的机构</string>

    <!--版本更新-->
    <string name="update_dialog_title">发现新版本%s</string>
    <string name="app_updating">版本更新</string>
    <string name="update_btn">立即更新</string>
    <string name="update_cancel">稍候再说</string>
    <string name="prompt_is_new_version">当前已是最新版本!</string>
    <string name="update_exception">检测版本更新失败,请重新检测!</string>

    <!-- 个人中心-->
    <string name="title_personal_center">个人中心</string>
    <string name="personal_info">个人资料</string>
    <string name="change_pass">修改密码</string>
    <string name="about">关于</string>
    <string name="version_update">版本更新</string>
    <string name="logout">退出登录</string>
    <string name="login_out">退出登录</string>
    <string name="commit">提交</string>

    <string name="btn_next">下一步</string>
    <string name="tips_change_password_verify">如果输入的用户名存在的话，验证码会发出</string>

    <!-- 设置-->
    <string name="title_change_persona_data">修改个人资料</string>
    <string name="title_change_password">修改密码</string>
    <string name="title_find_password">找回密码</string>
    <string name="title_set_password">设置新密码</string>
    <string name="title_forgot_password">忘记密码</string>

    <string name="msg_no_data_commit">没有信息提交</string>
    <string name="msg_modify_success">修改成功~</string>

    <string name="msg_old_password_null">旧密码不能为空!</string>
    <string name="msg_old_password_length_error">旧密码长度错误!</string>
    <string name="msg_new_password_null">新密码不能为空!</string>
    <string name="msg_new_password_length_error">新密码长度错误!</string>
    <string name="msg_password_null">密码不能为空!</string>
    <string name="msg_password_length_error">密码长度错误!</string>
    <string name="msg_password_again_error">2次密码不一致!</string>
    <string name="msg_change_password_success">修改密码成功,请重新登录~</string>
    <string name="msg_set_password_success">设置新密码成功,请登录~</string>
    <string name="msg_send_verify_success">验证码已发送</string>
    <string name="msg_account_null">请输入账号</string>
    <string name="msg_vercode_null">请输入验证码</string>
    <string name="msg_vercode_error">验证码错误</string>

    <string name="send_verify">发送验证码</string>
    <string name="resend_verify">重发验证码</string>
    <string name="unit_second"> 秒</string>

    <string name="sett_back">返回</string>
    <string name="save">保存</string>
    <string name="personal_data">个人资料</string>
    <string name="change_password">修改密码</string>
    <string name="server_address">服务器地址</string>
    <string name="first_name">名字</string>
    <string name="last_name">姓氏</string>
    <string name="phone_number">手机号码</string>
    <string name="email">电子邮箱</string>
    <string name="new_password">新密码</string>
    <string name="verify_password">重复密码</string>
    <string name="name_null">请填写名字</string>
    <string name="xing_null">请填写姓氏</string>
    <string name="phone_null">请填写手机号码</string>
    <string name="email_null">请填写电子邮箱</string>
    <string name="save_over">保存成功</string>

    <!--忘记密码 -->
    <string name="format_resend_verify">重新发送(%d)</string>


    <!-- 任务-->
    <string name="title_task">我的任务</string>
    <string name="task_unstart">待参加的</string>
    <string name="task_ongoing">进行中的</string>
    <string name="task_finished">已完成</string>

    <!-- 课程-->
    <string name="title_course_classify">课程分类</string>
    <string name="format_course_course_count">课件:%d</string>
    <string name="format_course_quiz_count">考试:%d</string>
    <string name="format_course_survey_count">问卷:%d</string>

    <!-- 学习-->
    <string name="entry_leaning_path">学习路径</string>
    <string name="entry_live">直播追踪</string>
    <string name="entry_micro_degree">微学位</string>
    <string name="entry_course_classify">课程分类</string>

    <!-- 学习路径-->
    <string name="format_deadline_time">截止时间: %s</string>
    <string name="title_learning_path">学习路径</string>
    <string name="format_total_progress">学习进度:%s</string>
    <string name="format_progress">进度:%d</string>
    <string name="format_auth">讲师:%s</string>

    <!--榜单 -->
    <string name="title_rank">榜单</string>
    <string name="rank_tab_total">总排名</string>
    <string name="rank_tab_group">组内排名</string>
    <string name="rank_tab_groups">分组排名</string>

    <string name="me">我</string>
    <string name="title_about">关于</string>

    <!-- 学习小结-->
    <string name="title_learning_summary">学习小结</string>
    <string name="finish_course">完成课程</string>
    <string name="finish_quiz">完成考试</string>
    <string name="finish_survey">完成问卷</string>
    <string name="finish_micro_degree">完成微学位</string>
    <string name="finish_path">完成学习路径</string>
    <string name="finish_task">完成任务</string>

    <string name="quiz_average">考试平均分</string>
    <string name="points">获得学分</string>
    <string name="leraning_total_time">累计学习时间</string>
    <string name="like_count">点赞课程次数</string>
    <string name="comment_count">评论数</string>
    <string name="share">分享</string>

    <!-- 任务-->
    <string name="format_progress_complete">已完成%d</string>
    <string name="un_start">未开始</string>

    <!--课程详情 -->
    <string name="tab_course_detail_intro">简介</string>
    <string name="tab_course_detail_learn_history">学习历史</string>
    <string name="tab_course_detail_comment">评论</string>


    <string name="version_about">版本号： %s</string>
    <string name="version_about_test">版本号： %s test</string>

    <string name="title_news_list">资讯</string>

    <!--Reset Password-->
    <string name="resetPassword">找回密码</string>
    <string name="enterusername">请输入用户名</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="re_code">重发验证码</string>
    <string name="confirm">确认</string>
    <string name="verification_code_has_been_sent">验证码已发送</string>
    <string name="failed_to_get_verification_code">获取验证码失败</string>
    <string name="setnewpasssword">设置新密码</string>
    <string name="re_enter_password">请再次输入密码</string>
    <string name="enter_password">请输入密码(6-20数字和字符)</string>

    <string name="tost_user_true">如果输入的用户名存在，验证码会发出</string>
    <string name="obtain_verify">获取验证码</string>

    <string name="hint_verification_code">请输入验证码</string>

    <string name="toast_success_edt_user_info">修改成功~</string>


    <!-- 我的荣誉-->
    <string name="title_my_honor">我的荣誉</string>
    <string name="medal_for_testing">测试达人勋章</string>
    <string name="medal_for_learning">学习达人勋章</string>
    <string name="format_badges_num">(已获得%d枚)</string>
    <string name="format_medal_num">(已获得%d枚)</string>

    <string name="format_rank">第%d名</string>
    <string name="points_rule">积分规则</string>

</resources>
