<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">
    <include
        layout="@layout/common_view_title_bar_personal"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/iv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:src="@drawable/account_icon"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiedt_account"
            android:layout_toRightOf="@id/iv_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:hint="@string/enterusername"
            android:textColorHint="#bebebe"
            android:background="@color/transparent"
            android:textColor="#333333"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:background="#ebebeb"/>
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/iv_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:src="@drawable/verification_icon"/>


        <TextView
            android:id="@+id/tv_send_verify"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="11dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/selector_send_verify"
            android:textSize="14sp"
            android:text="@string/obtain_verify"
            android:gravity="center_vertical"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiedt_verify_code"
            android:layout_toRightOf="@id/iv_verify"
            android:layout_toLeftOf="@id/tv_send_verify"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:background="@color/transparent"
            android:singleLine="true"
            android:textColor="#333333"
            android:hint="@string/hint_verification_code"
            android:textColorHint="#bebebe"
            android:inputType="number"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:background="#dddddd"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:layout_marginLeft="20dp"
        android:visibility="gone"
        android:text="@string/tips_change_password_verify"/>
    
    
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:text="@string/btn_next"
        android:textColor="@color/white"
        android:background="@drawable/shape_roud_rectangel_btn_next"/>

</LinearLayout>
