<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lin_my_questionnaire"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_common_press"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:src="@drawable/my_questionnaire_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/text_14_33"
            android:layout_marginLeft="21dp"
            android:layout_weight="1"
            android:text="@string/my_questionnaire" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:src="@drawable/more_enter_icon" />

    </LinearLayout>

    <View style="@style/style_line" />

    <LinearLayout
        android:id="@+id/lin_my_learning_path"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_common_press"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:src="@drawable/my_learningpath_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/text_14_33"
            android:layout_marginLeft="21dp"
            android:layout_weight="1"
            android:text="@string/my_learning_path" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:src="@drawable/more_enter_icon" />

    </LinearLayout>

    <View style="@style/style_line" />

    <LinearLayout
        android:id="@+id/lin_my_degree"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_common_press"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:src="@drawable/my_microdegree_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/text_14_33"
            android:layout_marginLeft="21dp"
            android:layout_weight="1"
            android:text="@string/my_degree" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:src="@drawable/more_enter_icon" />

    </LinearLayout>

    <View style="@style/style_line" />

    <LinearLayout
        android:id="@+id/lin_my_certificate_centre"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_common_press"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:src="@drawable/my_certificate_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/text_14_33"
            android:layout_marginLeft="21dp"
            android:layout_weight="1"
            android:text="@string/my_certificate_centre" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:src="@drawable/more_enter_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_my_message_centre"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_common_press"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:src="@drawable/my_news_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/text_14_33"
            android:layout_marginLeft="21dp"
            android:layout_weight="1"
            android:text="@string/my_message_centre" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:src="@drawable/more_enter_icon" />

    </LinearLayout>

    <View style="@style/style_line" />

    <LinearLayout
        android:id="@+id/lin_my_help_centre"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_common_press"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:src="@drawable/my_help_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/text_14_33"
            android:layout_marginLeft="21dp"
            android:layout_weight="1"
            android:text="@string/my_help_centre" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:src="@drawable/more_enter_icon" />

    </LinearLayout>

</LinearLayout>