<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/common_view_title_bar_personal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiedt_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="26dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/input_hint_new_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#333333"
            android:background="@color/transparent"
            android:textColorHint="#bebebe"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:background="#dddddd" />

        <CheckBox
            android:id="@+id/check_show_new_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:button="@drawable/check_show_password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiedt_new_password_again"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="26dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/input_hint_new_password_again"
            android:inputType="textPassword"
            android:background="@color/transparent"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#333333"
            android:textColorHint="#bebebe"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:background="#dddddd" />

        <CheckBox
            android:id="@+id/check_show_new_pass_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:button="@drawable/check_show_password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="13sp"
        android:text="@string/tips_change_password"
        android:textColor="#9DCF3A" />


    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="33dp"
        android:textAllCaps="false"
        android:background="@drawable/shape_roud_rectangel_btn_login"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>