<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:src="@drawable/login_logo_icon" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiedt_login_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="33dp"
                android:layout_marginTop="40dp"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/login_user_icon"
                android:drawablePadding="15dp"
                android:ellipsize="end"
                android:hint="@string/input_hint_username"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="#888888"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="33dp"
                android:background="#d6d6d6" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiedt_login_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="33dp"
                android:layout_marginTop="20dp"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/login_password_icon"
                android:drawablePadding="15dp"
                android:ellipsize="end"
                android:hint="@string/input_hint_password"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="#888888"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="33dp"
                android:background="#d6d6d6" />

            <TextView
                android:id="@+id/tv_forget_pass"
                android:layout_width="wrap_content"
                android:layout_marginRight="33dp"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:padding="5dp"
                android:text="@string/forget_passwords"
                android:textColor="#2BC17A" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_roud_rectangel_btn_login"
                android:enabled="false"
                android:text="@string/login"
                android:textColor="@color/selector_login_btn_text_color"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
